Refactor project folder structure