@@ -1,27 +1,19 @@
-package org.example.sorting;
+package org.datastructure.sorting;
 
 import junit.framework.TestCase;
-import org.example.sorting.SortOrder;
-import org.example.sorting.impl.*;
+import org.datastructure.sorting.impl.*;
 
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
 
-public class SortElementsTest  extends TestCase{
+public class SingleElementTest extends TestCase {
 
-    List<Integer> input = Arrays.asList(5, 2, 8, 1, 9);
-    List<Integer> expected = Arrays.asList(9, 8, 5, 2, 1);
+    List<Integer> input = List.of(5);
+    List<Integer> expected = List.of(5);
 
     public void testBubbleSort() {
         List<Integer> actual = BubbleSort.sort(input, SortOrder.DESC);
-        assertIterableEquals(expected, actual);
-    }
-
-    public void testSelectionSort() {
-        List<Integer> actual = SelectionSort.sort(input, SortOrder.DESC);
         assertIterableEquals(expected, actual);
     }
 
@@ -32,6 +24,11 @@ public class SortElementsTest  extends TestCase{
 
     public void testMergeSort() {
         List<Integer> actual = MergeSort.sort(input, SortOrder.DESC);
+        assertIterableEquals(expected, actual);
+    }
+
+    public void testSelectionSort() {
+        List<Integer> actual = SelectionSort.sort(input, SortOrder.DESC);
         assertIterableEquals(expected, actual);
     }
 
